--- a/index-START.html
+++ b/index-START.html
@@ -58,40 +58,16 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
-  document.addEventListener('keydown', logKey);
-    function logKey(e) {
-      switch (e.which) {
-        case 65:
-          alert('A');
-          break;
-        case 83:
-          alert('S');
-          break;
-        case 68:
-          alert('D');
-          break;
-        case 70:
-          alert('F');
-          break;
-        case 71:
-          alert('G');
-          break;
-        case 72:
-          alert('H');
-          break;
-        case 74:
-          alert('J');
-          break;
-        case 75:
-          alert('K');
-          break;
-        case 76:
-          alert('L');
-          break;
-        default:
-        
-      }
+  document.addEventListener('keydown', function(e){
+    const audio = document.querySelector(`audio[data-key ="${e.keyCode}"]`);
+    if (!audio){
+      return;
     }
+    audio.play();
+
+    const letterSquare = document.querySelector(`div[data-key ="${e.keyCode}"]`);
+    letterSquare.classList.toggle('playing')
+  });
 </script>
 
 
